DATAREDIS-525 - Add assertions.